--- a/index.html
+++ b/index.html
@@ -691,11 +691,11 @@
     <div id="fayrouzMenuPage" class="page-section-container">
         <div class="app-container">
             <header class="header-main">
-                <a href="#" onclick="showPage('landingPage'); return false;" class="header-logo-link" aria-label="Fayrouz Cafe Home">
+                <a href="#" onclick="fayrouzGoBackToStart();" class="header-logo-link" aria-label="Fayrouz Cafe Home">
                      <img src="images/fayrouz_logo.svg" alt="كافيه فيروز">
                 </a>
                 <nav class="main-categories-nav" id="fayrouzMainCategoriesNav"></nav> <!-- ID changed -->
-                <div class="reset-button" onclick="fayrouzGoBackToStart()" title="إعادة تعيين">&#x21BB;</div> <!-- Function changed -->
+                <div class="reset-button" onclick="showPage('landingPage'); return false" title="إعادة تعيين">&#x21BB;</div> <!-- Function changed -->
             </header>
             <div class="banner-image" id="fayrouzBannerImage"></div> <!-- ID changed -->
             <div class="header-secondary-wrapper"> 
@@ -723,11 +723,11 @@
     <div id="eatwellMenuPage" class="page-section-container eatwell-theme"> <!-- Added .eatwell-theme here -->
          <div class="app-container">
             <header class="header-main">
-                <a href="#" onclick="showPage('landingPage'); return false;" class="header-logo-link" aria-label="EatWell Home">
+                <a href="#" onclick="eatwellGoBackToStart()" class="header-logo-link" aria-label="EatWell Home">
                      <img src="images/eatwell_logo.svg" alt="إيت ويل">
                 </a>
                 <nav class="main-categories-nav" id="eatwellMainCategoriesNav"></nav> <!-- ID changed -->
-                <div class="reset-button" onclick="eatwellGoBackToStart()" title="إعادة تعيين">&#x21BB;</div> <!-- Function changed -->
+                <div class="reset-button" onclick="showPage('landingPage'); return false;" title="إعادة تعيين">&#x21BB;</div> <!-- Function changed -->
             </header>
             <div class="banner-image" id="eatwellBannerImage"></div> <!-- ID changed -->
             <div class="header-secondary-wrapper"> 
