--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
             <p>
                 تابعونا على إنستغرام:
                 <a href="https://www.instagram.com/fayruz_cafe?igsh=eGo0cWttdnRqMXAz" target="_blank" rel="noopener noreferrer">فيروز كافيه</a> |
-                <a href="https://www.instagram.com/eatwellerbil/" target="_blank" rel="noopener noreferrer">إيت ويل</a>
+                <a href="https://www.instagram.com/eatwell_dietfood?igsh=M3Ryb2o2b3dhYW1o" target="_blank" rel="noopener noreferrer">إيت ويل</a>
             </p>
         </footer>
     </div>
